# gltf_viewer

./: Cargo.toml  README.md
shaders/: constants.wgsl
shaders/equirectangular/: data.wgsl  equirectangular.frag  fullscreen.vert
shaders/primitive/: camera.wgsl  data.wgsl  ibl.wgsl  material.wgsl  pbr.wgsl  primitive.frag  primitive.vert
shaders/skybox/: data.wgsl  skybox.frag  skybox.vert
src/: app.rs  args.rs  camera.rs  cli.rs  error.rs  lib.rs  main.rs  view.rs
src/data/: mod.rs  projection.rs  transform.rs
src/render/: cubemap.rs  equirectangular.rs  ibl.rs  image.rs  lut.rs  material.rs  mesh.rs  mod.rs  node.rs  pipeline.rs  primitive.rs  sampler.rs  scene.rs  shader.rs  skybox.rs  state.rs  storage.rs  texture.rs  view.rs
src/render/buffer/: allocator.rs  mod.rs
src/render/camera/: mod.rs  projection.rs  user.rs
src/resource/: mod.rs
src/resource/cubemap/: ktx2.rs  mod.rs
src/resource/gltf/asset/: file.rs  mod.rs
src/resource/gltf/loader/: file.rs  mod.rs
src/resource/ibl/: file.rs  mod.rs
