[package]
name = "gltf_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.17.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
gltf = "1.4.1"
half = { version = "2.4.1", features = ["bytemuck"] }
image = { version = "0.25.2", default-features = false, features = ["hdr", "jpeg", "png"] }
ktx2 = "0.3.0"
log = "0.4.22"
pollster = "0.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tera = "1.20.0"
wgpu = "22.1.0"
winit = "0.30.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"
